Allow updating osm user id and name for moderators
